appId: org.mifos.backoffice
---
- launchApp
- assertVisible:
    id: "dynamic-template-forms_header"
- assertVisible:
    id: "dynamic-template-forms_content"
- tapOn:
    id: "dynamic-template-forms_text_field"
- tapOn:
    id: "dynamic-template-forms_submit"
