appId: org.mifos.backoffice
---
- launchApp
- assertVisible:
    id: "m15-approvals-makerchecker_header"
- assertVisible:
    id: "m15-approvals-makerchecker_content"
- tapOn:
    id: "m15-approvals-makerchecker_item"
- assertVisible:
    id: "m15-approvals-makerchecker_approve"
- tapOn:
    id: "m15-approvals-makerchecker_approve"
